force-app/main/default/objects/Show_User__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nagpur</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
            <value>
                <fullName>Mehrauli</fullName>
            </value>
            <value>
                <fullName>Los Angeles</fullName>
            </value>
            <value>
                <fullName>San Fancisco</fullName>
            </value>
            <value>
                <fullName>Huston</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
            <value>
                <fullName>Tampa</fullName>
            </value>
            <value>
                <fullName>Pinggu</fullName>
            </value>
            <value>
                <fullName>Daxing</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Indore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>