force-app/main/default/objects/Show_User__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <label>Phone No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>