force-app/main/default/objects/Show_User__c/fields/Secret_Answer__c.field-meta.xml
<CustomField>
    <fullName>Secret_Answer__c</fullName>
    <label>Secret Answer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>