force-app/main/default/objects/Show_User__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <inlineHelpText>Please Select Your Secret question</inlineHelpText>
    <label>Secret Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>What is your mother&apos;s maiden name?</fullName>
            </value>
            <value>
                <fullName>School Name</fullName>
            </value>
            <value>
                <fullName>City Of Birth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>