force-app/main/default/objects/Show_User__c/validationRules/Password_Equal_Confirm_Password.validationRule-meta.xml
<ValidationRule>
    <fullName>Password_Equal_Confirm_Password</fullName>
    <active>true</active>
    <errorConditionFormula>Password__c   &lt;&gt;   Confirm_Password__c</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>Password shold match confirm password</errorMessage>
</ValidationRule>